--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,12 +73,12 @@ jobs:
 
       - name: Update tag in Helm chart
         run: |
-          sed -i 's/tag: .*/tag: "${{github.run_id}}"/' helm/go-web-app-chart/values.yaml
+          sed -i 's/tag: .*/tag: "${{github.run_id}}"/' Helm/go-web-app/values.yaml
 
       - name: Commit and push changes
         run: |
-          git config --global user.email "abhishek@gmail.com"
-          git config --global user.name "Abhishek Veeramalla"
-          git add helm/go-web-app-chart/values.yaml
+          git config --global user.email "donfortunet.df@gmail.com"
+          git config --global user.name "donfortune"
+          git add Helm/go-web-app/values.yaml
           git commit -m "Update tag in Helm chart"
           git push
