--- a/Helm/go-web-app/values.yaml
+++ b/Helm/go-web-app/values.yaml
@@ -8,5 +8,5 @@ image:
   repository: donfortune1/go-web-app
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.3"
+  tag: "10593809100"
 
